--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "get-port": "^7.1.0",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.2"
