--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "projetdevserver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^6.0.0",
-    "express": "^5.1.0",
-    "get-port": "^7.1.0",
-    "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7",
-    "ws": "^8.18.2"
+    "name": "projetdevserver",
+    "version": "1.0.0",
+    "type": "module",
+    "scripts": {
+      "start": "node ./dist/server.js",
+      "build": "tsc"
+    },
+    "dependencies": {
+      "bcrypt": "^6.0.0",
+      "express": "^5.1.0",
+      "get-port": "^7.1.0",
+      "socket.io": "^4.8.1",
+      "sqlite3": "^5.1.7",
+      "ws": "^8.18.2"
+    },
+    "devDependencies": {
+      "@types/bcrypt": "^5.0.2",
+      "@types/node": "^22.15.30",
+      "@types/sqlite3": "^5.1.0",
+      "@types/ws": "^8.18.1",
+      "typescript": "^5.8.3"
+    }
   }
-}
+  
